fix: nav z-index should cover hero content

--- a/components/04-navigation/nav/nav.pcss
+++ b/components/04-navigation/nav/nav.pcss
@@ -216,7 +216,7 @@
       inline-size: 100%;
       transition: var(--skeleton-transition-nav-item);
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-      z-index: 1;
+      z-index: 2;
       
       > .nav__list {
         transform: translateY(-100%);
